--- a/android/app/src/main/res/values/colors-splash.xml
+++ b/android/app/src/main/res/values/colors-splash.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splashprimary">#fff</color>
+    <color name="splashprimary">#F94E3F</color>
 </resources>
